--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,21 +30,19 @@ jobs:
         pip freeze > requirements.txt
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 practical2.py --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 practical2.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        pytest practical2.py
     - name: Install cyclonedx-py
       run: |
         python -m pip install cyclonedx-py
-    - name: Generate SBOM from requirements.txt
+    - name: Generate SBOM for practical2.py
       run: |
-        cyclonedx-py requirements -r requirements.txt -o sbom.json
+        cyclonedx-py requirements -r requirements.txt -o sbom_practical2.json
     - name: Upload SBOM as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: sbom
-        path: sbom.json
+        name: sbom-practical2
+        path: sbom_practical2.json
